# AI-Engineering-Projects

./: .gitignore  README.md  kuzu  pyproject.toml
docs/: ARCHITECTURE.md  KB_PLAYBOOK.md
scripts/: bootstrap_dev.py  build_pairs.py  debug_deal_graph.py  debug_deal_retrieval.py  debug_graph_expansion.py  dump_transcript.py  evaluate_deal_rag_recall.py  evaluate_deal_routed_recall.py  evaluate_rag_recall.py  export_case_bundle.py  export_deal_transcripts.py  extract_sksp_items.py  find_transcripts.py  ingest_sksp_items_to_kuzu.py  init_equipment_graph.py  inspect_pairs.py  kuzu_schema_dump.py  mvp_engineer_cli.py  mvp_engineer_run.py  mvp_sksp_cli.py  normalize_sksp_items.py  pick_best_call.py  quick_show_call.py  regression_smoke.py  report_storage_stats.py  run_one_case.py  smoke_test.py  test_yandex_completion.py
src/mvp_sksp/: cli.py  config.py  engineer_cli.py
src/mvp_sksp/adapters/: bitrix_links.py  deal_kuzu_retriever.py  deal_postgres_store.py  price_classifier.py  price_layer_store.py  rag_wrappers.py
src/mvp_sksp/domain/: candidates.py  equipment_graph.py  llm_contract.py  ops.py  spec.py
src/mvp_sksp/editing/: editor.py  intent.py  matching.py  parser.py  scope.py
tests/: test_candidate_classifier.py  test_coverage_planner.py  test_dependency_resolver.py  test_editor_dedupe.py  test_knowledge_map.py  test_quantity_resolver.py  test_replace_semantics.py  test_requirements_extractor.py  test_role_expander.py  test_topology_selector.py  test_triage.py
tmp/: case_17372.json  items_all.jsonl  items_all_norm.jsonl  pairs.jsonl  storage_report.json
(+52 files in other folders)
